--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "postcss-import": "^12.0.1",
-        "tailwindcss": "^2.0.1",
+        "tailwindcss": "^2.1.4",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
+        "@inertiajs/inertia-vue": "^0.6.2",
         "admin-lte": "^3.1.0"
     }
 }
